[package]
name = "rust_lib_danawallet"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.3.0"
sp_client = { git = "https://github.com/cygnet3/sp-client", branch = "master", features = ["blindbit-backend"]}
lazy_static = "1.4"
anyhow = "1.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
once_cell = "1.18.0"
bip39 = { version = "2.0.0", features = ["rand"] }
serde_with = "3.6.0"
log = "0.4.20"
simplelog = "0.12.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
pushtx = { git = "https://github.com/cygnet3/pushtx", branch = "master" }
futures = "0.3"
async-trait = "0.1"
bdk_coin_select ={ git = "https://github.com/bitcoindevkit/coin-select.git", rev = "c22b30b7dcc8d20d861033580abd0bcbd1e07f91" }
