[package]
name = "rust_lib_danawallet"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
sp-client = { git = "https://github.com/cygnet3/sp-client", branch = "wasm_sync", default-features = false }
backend-blindbit-native = { git = "https://github.com/cygnet3/sp-client", branch = "wasm_sync", default-features = false }
lazy_static = "1.4"
anyhow = "1.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
once_cell = "1.18.0"
bip39 = { version = "2.0.0", features = ["rand"] }
serde_with = "3.6.0"
log = "0.4.20"
simplelog = "0.12.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
pushtx = { git = "https://github.com/cygnet3/pushtx", branch = "master" }
futures = "0.3"
async-trait = "0.1"
rust-crypto = "0.2.36"
rand = "0.9.0"
base64 = "0.22.1"
futures-util = "0.3.31"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
