[package]
name = "rust_lib_danawallet"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
spdk-core = { git = "https://github.com/cygnet3/spdk", branch = "workspace_structure", features = ["parallel"] }
backend-blindbit-native = { git = "https://github.com/cygnet3/spdk", branch = "workspace_structure" }
anyhow = "1.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
once_cell = "1.18.0"
bip39 = { version = "2.0.0", features = ["rand"] }
log = "0.4.20"
simplelog = "0.12.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
pushtx = { git = "https://github.com/cygnet3/pushtx", branch = "master" }
rust-crypto = "0.2.36"
rand = "0.9.0"
base64 = "0.22.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
